# CMAGEP-MTSC

./: .gitignore  README.md  index.md
CMAGEP MTSC src/: CMakeLists.txt  Chromosome.cpp  Chromosome.h  FitnessFunction.cpp  FitnessFunction.h  Functions.cpp  Functions.h  GEP.cpp  GEP.h  Gene.cpp  Gene.h  Global.cpp  Global.h  library.h  main.cpp  mainArgs.txt
CMAGEP MTSC src/CMAGEP Python code/: CallCma.py  Consts.py  EvalFunc.py  FitnessFunctionsForCma.py  cma.py  interm.py  symp.py  timeout.py
CMAGEP MTSC src/help code/: findLocalPythonPaths.txt  submitWork.txt
Postprocess Python/: getClassificationScores.ipynb
Preprocess Python/: BaydoganRawToTrainTestTxt.ipynb  FeatureSelectionAndLags.ipynb
